Remote target implementation. case 665
* New plugin com.dynamo.cr.target for target handling